--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,10 +30,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.ojdbc6.jar=ojdbc6.jar
+file.reference.xchart-3.5.0.jar=xchart-3.5.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.ojdbc6.jar}
+    ${file.reference.ojdbc6.jar}:\
+    ${file.reference.xchart-3.5.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
